chore: change CI to ruff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,30 @@ build-backend = "setuptools.build_meta:__legacy__"
 minversion = "6.0"
 addopts = "-ra --durations=0 --cov-report xml:coverage.xml --cov PIconnect"
 
-[tool.isort]
-# make it compatible with black
-profile = "black"
+[tool.ruff.lint]
+# See: https://docs.astral.sh/ruff/rules/
+select = [
+    "C4",  # flake8-comprehensions
+    "E",   # pycodestyle
+    "F",   # pyflakes
+    "I",   # isort
+    "PT",  # pytest-style
+    "D",   # pydocstyle
+    "B",   # flake8-bugbear
+    "NPY", # numpy
+]
+# ignore = [
+#     "D100",  # Missing docstring in public module
+#     "E501",  # Line too long
+#     "D101",  # Missing docstring in public class
+#     "D102",  # Missing docstring in public method
+#     "D103",  # Missing docstring in public function
+#     "D104",  # Missing docstring in public package
+#     "D105",  # Missing docstring in magic method
+#     "D205",  # 1 blank line required between summary line and description
+#     "D401",  # First line of docstring should be in imperative mood
+#     "E741",  # Ambiguous variable name (such as "l")
+# ]
 
-[tool.black]
-line-length = 88
-target-version = ['py38', 'py39', 'py310', 'py311']
-include = '\.pyi?$'
+[tool.ruff.lint.pydocstyle]
+convention = "numpy"
