--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,10 +19,10 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [
-          '3.8'
-          , '3.9'
+          '3.9'
           , '3.10'
-          # , '3.11'
+          , '3.11'
+          , '3.12'
         ]
 
     steps:
@@ -36,17 +36,14 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install flake8 pytest wheel
+          python -m pip install ruff pytest wheel
           python -m pip install pytest-cov
           python -m pip install --exists-action=w --no-cache-dir -r requirements_dev.txt
           python -m pip install .
 
-      - name: Lint with flake8
+      - name: Lint with ruff
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+          ruff check .
 
       - name: Test with pytest
         run: |
@@ -66,12 +63,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install black
+          python -m pip install ruff
 
-      - name: Check formatting with black
+      - name: Check formatting with ruff
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          black --check --diff PIconnect
+          ruff format --check
 
   # codacy-security-scan:
   #   name: Codacy Security Scan
