--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,13 @@
 -i https://pypi.org/simple
-
-cffi==1.15.1
-
-clr-loader==0.2.5 ; python_version >= '3.7'
-
-numpy==1.24.2 ; python_version >= '3.10'
-
-pandas==1.5.3
-
--e .
-
-pycparser==2.21
-
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
-pythonnet==3.0.1
-
-pytz==2022.7.1
-
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
-wrapt==1.15.0rc1
-
+cffi==1.17.0rc1; python_version >= '3.8'
+clr-loader==0.2.6; python_version >= '3.7'
+numpy==1.26.4; python_version >= '3.9'
+pandas==2.2.2; python_version >= '3.9'
+-e . ; python_version >= '3.8'
+pycparser==2.22; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pythonnet==3.0.3; python_version < '3.13' and python_version >= '3.7'
+pytz==2024.1
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tzdata==2024.1; python_version >= '2'
+wrapt==1.16.0; python_version >= '3.6'
