--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,162 +1,78 @@
 -i https://pypi.org/simple
-
-alabaster==0.7.13 ; python_version >= '3.6'
-
-astroid==2.11.7 ; python_full_version >= '3.6.2'
-
-attrs==22.2.0 ; python_version >= '3.6'
-
-babel==2.11.0 ; python_version >= '3.6'
-
-black==23.1.0
-
-bleach==6.0.0 ; python_version >= '3.7'
-
-certifi==2022.12.7 ; python_version >= '3.6'
-
-charset-normalizer==3.0.1 ; python_full_version >= '3.6.0'
-
-click==8.1.3 ; python_version >= '3.7'
-
+alabaster==0.7.16; python_version >= '3.9'
+astroid==3.2.2; python_full_version >= '3.8.0'
+babel==2.15.0; python_version >= '3.8'
+black==24.4.2; python_version >= '3.8'
+certifi==2024.6.2; python_version >= '3.6'
+charset-normalizer==3.3.2; python_full_version >= '3.7.0'
+click==8.1.7; python_version >= '3.7'
 codacy-coverage==1.3.11
-
-codecov==2.1.12
-
-colorama==0.4.6 ; sys_platform == 'win32'
-
-coverage==7.1.0
-
-dill==0.3.6 ; python_version >= '3.7'
-
-doc8==1.1.1
-
-docutils==0.19 ; python_version >= '3.7'
-
-exceptiongroup==1.1.0 ; python_version < '3.11'
-
-flake8==6.0.0
-
-idna==3.4 ; python_version >= '3.5'
-
-imagesize==1.4.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
-importlib-metadata==6.0.0 ; python_version >= '3.7'
-
-iniconfig==2.0.0 ; python_version >= '3.7'
-
-isort==5.12.0 ; python_full_version >= '3.8.0'
-
-jaraco.classes==3.2.3 ; python_version >= '3.7'
-
-jinja2==3.1.2 ; python_version >= '3.7'
-
-keyring==23.13.1 ; python_version >= '3.7'
-
-lazy-object-proxy==1.9.0 ; python_version >= '3.7'
-
-markdown-it-py==2.1.0 ; python_version >= '3.7'
-
-markupsafe==2.1.2 ; python_version >= '3.7'
-
-mccabe==0.7.0 ; python_version >= '3.6'
-
-mdurl==0.1.2 ; python_version >= '3.7'
-
-more-itertools==9.0.0 ; python_version >= '3.7'
-
-mypy-extensions==1.0.0 ; python_version >= '3.5'
-
-packaging==23.0 ; python_version >= '3.7'
-
-pathspec==0.11.0 ; python_version >= '3.7'
-
-pbr==5.11.1 ; python_version >= '2.6'
-
-pkginfo==1.9.6 ; python_version >= '3.6'
-
-platformdirs==3.0.0 ; python_version >= '3.7'
-
-pluggy==1.0.0 ; python_version >= '3.6'
-
-pycodestyle==2.10.0 ; python_version >= '3.6'
-
-pyflakes==3.0.1 ; python_version >= '3.6'
-
-pygments==2.14.0 ; python_version >= '3.6'
-
-pylint==3.0.0a5
-
-pytest==7.2.1
-
-pytest-cov==4.0.0
-
-pytz==2022.7.1
-
-pywin32-ctypes==0.2.0 ; sys_platform == 'win32'
-
-pyyaml==6.0
-
-readme-renderer==37.3 ; python_version >= '3.7'
-
-requests==2.28.2 ; python_version >= '3.7' and python_version < '4'
-
-requests-toolbelt==0.10.1 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
+codecov==2.1.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+colorama==0.4.6; sys_platform == 'win32'
+coverage[toml]==7.5.3; python_version >= '3.8'
+dill==0.3.8; python_version >= '3.11'
+doc8==1.1.1; python_version >= '3.8'
+docutils==0.20.1; python_version >= '3.7'
+flake8==7.1.0; python_full_version >= '3.8.1'
+idna==3.7; python_version >= '3.5'
+imagesize==1.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+importlib-metadata==7.2.0; python_version >= '3.8'
+iniconfig==2.0.0; python_version >= '3.7'
+isort==5.13.2; python_full_version >= '3.8.0'
+jaraco.classes==3.4.0; python_version >= '3.8'
+jaraco.context==5.3.0; python_version >= '3.8'
+jaraco.functools==4.0.1; python_version >= '3.8'
+jinja2==3.1.4; python_version >= '3.7'
+keyring==25.2.1; python_version >= '3.8'
+markdown-it-py==3.0.0; python_version >= '3.8'
+markupsafe==2.1.5; python_version >= '3.7'
+mccabe==0.7.0; python_version >= '3.6'
+mdurl==0.1.2; python_version >= '3.7'
+more-itertools==10.3.0; python_version >= '3.8'
+mypy-extensions==1.0.0; python_version >= '3.5'
+nh3==0.2.17
+packaging==24.1; python_version >= '3.8'
+pathspec==0.12.1; python_version >= '3.8'
+pbr==6.0.0; python_version >= '2.6'
+pkginfo==1.11.1; python_version >= '3.8'
+platformdirs==4.2.2; python_version >= '3.8'
+pluggy==1.5.0; python_version >= '3.8'
+pycodestyle==2.12.0; python_version >= '3.8'
+pyflakes==3.2.0; python_version >= '3.8'
+pygments==2.18.0; python_version >= '3.8'
+pylint==3.2.3; python_full_version >= '3.8.0'
+pytest==8.2.2; python_version >= '3.8'
+pytest-cov==5.0.0; python_version >= '3.8'
+pywin32-ctypes==0.2.2; sys_platform == 'win32'
+pyyaml==6.0.2rc1; python_version >= '3.6'
+readme-renderer==43.0; python_version >= '3.8'
+requests==2.32.3; python_version >= '3.8'
+requests-toolbelt==1.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 restructuredtext-lint==1.4.0
-
-rfc3986==2.0.0 ; python_version >= '3.7'
-
-rich==13.3.1 ; python_full_version >= '3.7.0'
-
-setuptools==67.2.0 ; python_version >= '3.7'
-
-six==1.16.0 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
+rfc3986==2.0.0; python_version >= '3.7'
+rich==13.7.1; python_full_version >= '3.7.0'
 snowballstemmer==2.2.0
-
-sphinx==6.1.3
-
-sphinxcontrib-applehelp==1.0.4 ; python_version >= '3.8'
-
-sphinxcontrib-devhelp==1.0.2 ; python_version >= '3.5'
-
-sphinxcontrib-htmlhelp==2.0.1 ; python_version >= '3.8'
-
-sphinxcontrib-jsmath==1.0.1 ; python_version >= '3.5'
-
-sphinxcontrib-qthelp==1.0.3 ; python_version >= '3.5'
-
-sphinxcontrib-serializinghtml==1.1.5 ; python_version >= '3.5'
-
-stevedore==4.1.1 ; python_version >= '3.8'
-
-tomli==2.0.1 ; python_version < '3.11'
-
-tomlkit==0.11.6 ; python_version >= '3.6'
-
-twine==4.0.2
-
-urllib3==1.26.14 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
-
-webencodings==0.5.1
-
-wrapt==1.15.0rc1
-
-zipp==3.12.1 ; python_version >= '3.7'
-
-cffi==1.15.1
-
-clr-loader==0.2.5 ; python_version >= '3.7'
-
-numpy==1.24.2 ; python_version >= '3.10'
-
-pandas==1.5.3
-
--e .
-
-pycparser==2.21
-
-python-dateutil==2.8.2 ; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-
-pythonnet==3.0.1
-
+sphinx==7.3.7; python_version >= '3.9'
+sphinxcontrib-applehelp==1.0.8; python_version >= '3.9'
+sphinxcontrib-devhelp==1.0.6; python_version >= '3.9'
+sphinxcontrib-htmlhelp==2.0.5; python_version >= '3.9'
+sphinxcontrib-jsmath==1.0.1; python_version >= '3.5'
+sphinxcontrib-qthelp==1.0.7; python_version >= '3.9'
+sphinxcontrib-serializinghtml==1.1.10; python_version >= '3.9'
+stevedore==5.2.0; python_version >= '3.8'
+tomlkit==0.12.5; python_version >= '3.7'
+twine==5.1.0; python_version >= '3.8'
+urllib3==2.2.2; python_version >= '3.8'
+zipp==3.19.2; python_version >= '3.8'
+cffi==1.17.0rc1; python_version >= '3.8'
+clr-loader==0.2.6; python_version >= '3.7'
+numpy==1.26.4; python_version >= '3.9'
+pandas==2.2.2; python_version >= '3.9'
+-e . ; python_version >= '3.8'
+pycparser==2.22; python_version >= '3.8'
+python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+pythonnet==3.0.3; python_version < '3.13' and python_version >= '3.7'
+pytz==2024.1
+six==1.16.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
+tzdata==2024.1; python_version >= '2'
+wrapt==1.16.0; python_version >= '3.6'
