--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,13 +2,17 @@
 version: 2
 
 build:
-  image: latest
+  os: ubuntu-lts-latest
+  tools:
+    python: "3.12"
 
 formats: all
 
+sphinx:
+  builder: html
+  configuration: conf.py
+  fail_on_warning: true
+
 python:
-  version: "3.8"
   install:
     - requirements: requirements_dev.txt
-    - method: setuptools
-      path: .
