chore: add bump-my-version to pipfile

--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ piconnect = {editable = true, path = "."}
 ruff = "*"
 # coverage = "*"
 # mypy = "*"
+bump-my-version = "*"
 codecov = "*"
 codacy-coverage = "*"
 pylint = "*"
