--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,10 @@
 -i https://pypi.org/simple
 alabaster==0.7.16; python_version >= '3.9'
+annotated-types==0.7.0; python_version >= '3.8'
 astroid==3.2.2; python_full_version >= '3.8.0'
 babel==2.15.0; python_version >= '3.8'
-black==24.4.2; python_version >= '3.8'
+bracex==2.4; python_version >= '3.8'
+bump-my-version==0.23.0; python_version >= '3.8'
 certifi==2024.6.2; python_version >= '3.6'
 charset-normalizer==3.3.2; python_full_version >= '3.7.0'
 click==8.1.7; python_version >= '3.7'
@@ -11,9 +13,7 @@ codecov==2.1.13; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.
 colorama==0.4.6; sys_platform == 'win32'
 coverage[toml]==7.5.3; python_version >= '3.8'
 dill==0.3.8; python_version >= '3.11'
-doc8==1.1.1; python_version >= '3.8'
-docutils==0.20.1; python_version >= '3.7'
-flake8==7.1.0; python_full_version >= '3.8.1'
+docutils==0.21.2; python_version >= '3.9'
 idna==3.7; python_version >= '3.5'
 imagesize==1.4.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 importlib-metadata==7.2.0; python_version >= '3.8'
@@ -29,28 +29,30 @@ markupsafe==2.1.5; python_version >= '3.7'
 mccabe==0.7.0; python_version >= '3.6'
 mdurl==0.1.2; python_version >= '3.7'
 more-itertools==10.3.0; python_version >= '3.8'
-mypy-extensions==1.0.0; python_version >= '3.5'
 nh3==0.2.17
 packaging==24.1; python_version >= '3.8'
-pathspec==0.12.1; python_version >= '3.8'
-pbr==6.0.0; python_version >= '2.6'
 pkginfo==1.11.1; python_version >= '3.8'
 platformdirs==4.2.2; python_version >= '3.8'
 pluggy==1.5.0; python_version >= '3.8'
-pycodestyle==2.12.0; python_version >= '3.8'
-pyflakes==3.2.0; python_version >= '3.8'
+prompt-toolkit==3.0.36; python_full_version >= '3.6.2'
+pydantic==2.7.4; python_version >= '3.8'
+pydantic-core==2.18.4; python_version >= '3.8'
+pydantic-settings==2.3.3; python_version >= '3.8'
 pygments==2.18.0; python_version >= '3.8'
 pylint==3.2.3; python_full_version >= '3.8.0'
 pytest==8.2.2; python_version >= '3.8'
 pytest-cov==5.0.0; python_version >= '3.8'
+python-dotenv==1.0.1; python_version >= '3.8'
 pywin32-ctypes==0.2.2; sys_platform == 'win32'
 pyyaml==6.0.2rc1; python_version >= '3.6'
+questionary==2.0.1; python_version >= '3.8'
 readme-renderer==43.0; python_version >= '3.8'
 requests==2.32.3; python_version >= '3.8'
 requests-toolbelt==1.0.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-restructuredtext-lint==1.4.0
 rfc3986==2.0.0; python_version >= '3.7'
 rich==13.7.1; python_full_version >= '3.7.0'
+rich-click==1.8.3; python_version >= '3.7'
+ruff==0.4.10; python_version >= '3.7'
 snowballstemmer==2.2.0
 sphinx==7.3.7; python_version >= '3.9'
 sphinxcontrib-applehelp==1.0.8; python_version >= '3.9'
@@ -59,10 +61,12 @@ sphinxcontrib-htmlhelp==2.0.5; python_version >= '3.9'
 sphinxcontrib-jsmath==1.0.1; python_version >= '3.5'
 sphinxcontrib-qthelp==1.0.7; python_version >= '3.9'
 sphinxcontrib-serializinghtml==1.1.10; python_version >= '3.9'
-stevedore==5.2.0; python_version >= '3.8'
 tomlkit==0.12.5; python_version >= '3.7'
 twine==5.1.0; python_version >= '3.8'
+typing-extensions==4.12.2; python_version >= '3.8'
 urllib3==2.2.2; python_version >= '3.8'
+wcmatch==8.5.2; python_version >= '3.8'
+wcwidth==0.2.13
 zipp==3.19.2; python_version >= '3.8'
 cffi==1.17.0rc1; python_version >= '3.8'
 clr-loader==0.2.6; python_version >= '3.7'
