chore: fix readthedocs config

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -10,7 +10,7 @@ formats: all
 
 sphinx:
   builder: html
-  configuration: conf.py
+  configuration: docs/conf.py
   fail_on_warning: true
 
 python:
