--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,8 +1,10 @@
 -i https://pypi.org/simple
+accessible-pygments==0.0.5; python_version >= '3.9'
 alabaster==0.7.16; python_version >= '3.9'
 annotated-types==0.7.0; python_version >= '3.8'
 astroid==3.2.2; python_full_version >= '3.8.0'
 babel==2.15.0; python_version >= '3.8'
+beautifulsoup4==4.13.0b2; python_full_version >= '3.6.0'
 bracex==2.4; python_version >= '3.8'
 bump-my-version==0.23.0; python_version >= '3.8'
 certifi==2024.6.2; python_version >= '3.6'
@@ -38,6 +40,7 @@ prompt-toolkit==3.0.36; python_full_version >= '3.6.2'
 pydantic==2.7.4; python_version >= '3.8'
 pydantic-core==2.18.4; python_version >= '3.8'
 pydantic-settings==2.3.3; python_version >= '3.8'
+pydata-sphinx-theme==0.15.4rc0; python_version >= '3.9'
 pygments==2.18.0; python_version >= '3.8'
 pylint==3.2.3; python_full_version >= '3.8.0'
 pytest==8.2.2; python_version >= '3.8'
@@ -54,6 +57,7 @@ rich==13.7.1; python_full_version >= '3.7.0'
 rich-click==1.8.3; python_version >= '3.7'
 ruff==0.4.10; python_version >= '3.7'
 snowballstemmer==2.2.0
+soupsieve==2.5; python_version >= '3.8'
 sphinx==7.3.7; python_version >= '3.9'
 sphinxcontrib-applehelp==1.0.8; python_version >= '3.9'
 sphinxcontrib-devhelp==1.0.6; python_version >= '3.9'
@@ -72,7 +76,7 @@ cffi==1.17.0rc1; python_version >= '3.8'
 clr-loader==0.2.6; python_version >= '3.7'
 numpy==1.26.4; python_version >= '3.9'
 pandas==2.2.2; python_version >= '3.9'
--e . ; python_version >= '3.8'
+-e . ; python_version >= '3.9'
 pycparser==2.22; python_version >= '3.8'
 python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 pythonnet==3.0.3; python_version < '3.13' and python_version >= '3.7'
