--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ name: Test PIconnect
 on:
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [develop, master]
+    branches: [develop, main]
   schedule:
     - cron: "27 19 * * 3"
 
