--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [develop, master]
+    branches: [develop, main]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [develop, master]
+    branches: [develop, main]
   schedule:
     - cron: "18 19 * * 3"
 
