--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,6 @@ name = "PIconnect"
 authors = [{ name = "Hugo Lapre", email = "dev@tbdwebdesign.nl" }]
 readme = "README.rst"
 license = "MIT"
-requires-python = ">=3.11"
 keywords = ["OSIsoft", "AVEVA", "PI", "Process Information", "PIconnect"]
 classifiers = [
   "Development Status :: 4 - Beta",
@@ -18,7 +17,8 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
 ]
 dynamic = ["version", "description"]
-dependencies = ["pandas>=2,<3", "numpy>=2,<3", "wrapt>=1.17,<2"]
+requires-python = ">=3.11"
+dependencies = ["pandas>=2,<3", "numpy>=2,<3", "pythonnet>=3", "wrapt>=1.17,<2"]
 
 [project.urls]
 Homepage = "https://github.com/Hugovdberg/PIconnect"
@@ -27,8 +27,8 @@ Issues = "https://github.com/Hugovdberg/PIconnect/issues"
 Documentation = "https://piconnect.readthedocs.io/en/stable/"
 
 [build-system]
-requires = ["flit_core >=3.11,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools", "versioneer[toml]"]
+build-backend = "setuptools.build_meta"
 
 [tool.pixi.project]
 name = "PIconnect"
@@ -44,13 +44,17 @@ PIconnect = { path = ".", editable = true }
 python = "*"
 
 [tool.pixi.feature.build.pypi-dependencies]
-flit = ">=3.11,<4"
+build = "*"
 
 [tool.pixi.feature.build.tasks]
-build = "flit build"
+build = "python -m build --outdir ./dist"
 
 [tool.pixi.feature.lint.dependencies]
 ruff = "*"
+
+[tool.pixi.feature.lint.tasks]
+lint = "ruff check ."
+format = { cmd = "ruff format --check .", depends-on = ["lint"] }
 
 [tool.pixi.feature.test.dependencies]
 pytest = "*"
@@ -59,15 +63,30 @@ codacy-coverage = "*"
 codecov = "*"
 coverage = "*"
 
+[tool.pixi.feature.test.tasks]
+test = "pytest"
+
 [tool.pixi.feature.docs.dependencies]
 Sphinx = "*"
 pydata-sphinx-theme = "*"
+
+[tool.pixi.feature.py311.dependencies]
+python = "3.11.*"
+
+[tool.pixi.feature.py312.dependencies]
+python = "3.12.*"
+
+[tool.pixi.feature.py313.dependencies]
+python = "3.13.*"
 
 [tool.pixi.environments]
 build = { features = ["build"], no-default-feature = true }
 test = { features = ["test"], solve-group = "default" }
 lint = ["lint"]
 docs = ["docs"]
+py311 = ["py311", "test"]
+py313 = ["py313", "test"]
+py312 = ["py312", "test"]
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -106,13 +125,9 @@ select = [
 convention = "numpy"
 
 
-[tool.bumpversion]
-current_version = "0.12.1"
-tag = false
-commit = true
-message = "chore: Bump version: {current_version} → {new_version}"
-
-[[tool.bumpversion.files]]
-search = "__version__ = \"{current_version}\""
-replace = "__version__ = \"{new_version}\""
-filename = "PIconnect/__init__.py"
+[tool.versioneer]
+VCS = "git"
+style = "pep440"
+versionfile_source = "PIconnect/_version.py"
+versionfile_build = "PIconnect/_version.py"
+tag_prefix = "v"
