--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # SCM syntax highlighting & preventing 3-way merges
 pixi.lock merge=binary linguist-language=YAML linguist-generated=true
+PIconnect/_version.py export-subst
