--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -21,43 +21,87 @@ jobs:
         run: |
           git config --global core.autocrlf false
           git config --global core.eol lf
+
       - uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: prefix-dev/setup-pixi@v0.8.3
         with:
-          python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+            environments: >-
+                build
+
       - name: Build package
-        run: python -m build --outdir ./dist
+        run: pixi run build
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: PIconnect_builds
           path: ./dist/
+
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+        id-token: write
+    environment:
+        name: pypi
+        url: https://pypi.org/project/piconnect/
 
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.x"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build
+
       - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: PIconnect_builds
           path: ./dist/
+
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
+
+github-release:
+    name: >-
+      Sign the Python 🐍 distribution 📦 with Sigstore
+      and upload them to GitHub Release
+    needs:
+    - build
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write  # IMPORTANT: mandatory for making GitHub Releases
+      id-token: write  # IMPORTANT: mandatory for sigstore
+
+    steps:
+    - name: Download all the dists
+      uses: actions/download-artifact@v4
+      with:
+        name: PIconnect_builds
+        path: ./dist/
+    - name: Sign the dists with Sigstore
+      uses: sigstore/gh-action-sigstore-python@v3.0.0
+      with:
+        inputs: >-
+          ./dist/*.tar.gz
+          ./dist/*.whl
+    # - name: Create GitHub Release
+    #   env:
+    #     GITHUB_TOKEN: ${{ github.token }}
+    #   run: >-
+    #     gh release create
+    #     "$GITHUB_REF_NAME"
+    #     --repo "$GITHUB_REPOSITORY"
+    #     --notes ""
+    - name: Upload artifact signatures to GitHub Release
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+      # Upload to GitHub Release using the `gh` CLI.
+      # `dist/` contains the built packages, and the
+      # sigstore-produced signatures and certificates.
+      run: >-
+        gh release upload
+        "$GITHUB_REF_NAME" dist/**
+        --repo "$GITHUB_REPOSITORY"
