--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,8 +3,13 @@ version: 2
 
 build:
   os: ubuntu-lts-latest
-  tools:
-    python: "3.12"
+  commands:
+    - asdf plugin add pixi
+    - asdf install pixi latest
+    - asdf global pixi latest
+    - pixi run build-docs
+    - mkdir -p $READTHEDOCS_OUTPUT/html/
+    - cp -r docs/_build/html/** $READTHEDOCS_OUTPUT/html/
 
 formats: all
 
@@ -12,7 +17,3 @@ sphinx:
   builder: html
   configuration: docs/conf.py
   fail_on_warning: false
-
-python:
-  install:
-    - requirements: requirements_dev.txt
