--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,13 +3,15 @@ version: 2
 
 build:
   os: ubuntu-lts-latest
-  commands:
-    - asdf plugin add pixi
-    - asdf install pixi latest
-    - asdf global pixi latest
-    - pixi run build-docs
-    - mkdir -p $READTHEDOCS_OUTPUT/html/
-    - cp -r docs/_build/html/** $READTHEDOCS_OUTPUT/html/
+  jobs:
+    create_environment:
+      - asdf plugin add pixi
+      - asdf install pixi latest
+      - asdf global pixi latest
+      - pixi install -e docs
+    build:
+      html:
+        - pixi run build-docs $READTHEDOCS_OUTPUT/html/
 
 formats: all
 
