--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,7 +73,7 @@ Sphinx = "*"
 pydata-sphinx-theme = "*"
 
 [tool.pixi.feature.docs.tasks]
-build-docs = "sphinx-build -T -b html docs docs/_build/html"
+build-docs = "sphinx-build -T -b html docs"
 
 [tool.pixi.feature.py311.dependencies]
 python = "3.11.*"
