--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,6 +3,8 @@ version: 2
 
 build:
   os: ubuntu-lts-latest
+  tools:
+    python: "3.13"
   jobs:
     create_environment:
       - asdf plugin add pixi
