--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -2,7 +2,7 @@
 version: 2
 
 build:
-  os: windows-latest
+  os: ubuntu-lts-latest
   commands:
     - asdf plugin add pixi
     - asdf install pixi latest
