--- a/pyproject.toml
+++ b/pyproject.toml
@@ -68,6 +68,9 @@ coverage = "*"
 [tool.pixi.feature.test.tasks]
 test = "pytest"
 
+[tool.pixi.feature.docs]
+platforms = ["linux-64"]
+
 [tool.pixi.feature.docs.dependencies]
 Sphinx = "*"
 pydata-sphinx-theme = "*"
