fix: add pixi task ls for debugging purposes

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -9,6 +9,7 @@ build:
     - asdf global pixi latest
     - pixi install -e docs
     - mkdir -p $READTHEDOCS_OUTPUT/html/
+    - pixi task ls
     - pixi run build-docs $READTHEDOCS_OUTPUT/html/
 
 formats: all
