--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ build-backend = "setuptools.build_meta"
 [tool.pixi.project]
 name = "PIconnect"
 channels = ["conda-forge"]
-platforms = ["win-64"]
+platforms = ["win-64", "linux-64"]
 
 [tool.pixi.pypi-dependencies]
 PIconnect = { path = ".", editable = true }
@@ -69,7 +69,7 @@ coverage = "*"
 test = "pytest"
 
 [tool.pixi.feature.docs]
-platforms = ["linux-64"]
+platforms = ["linux-64", "win-64"]
 
 [tool.pixi.feature.docs.dependencies]
 Sphinx = "*"
