fix: add missing dotnet package to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ project_urls =
 packages =
     PIconnect
     PIconnect._typing
+    PIconnect._typing.dotnet`
 install_requires =
     pandas
     wrapt
