--- a/setup.cfg
+++ b/setup.cfg
@@ -34,7 +34,7 @@ project_urls =
 packages =
     PIconnect
     PIconnect._typing
-    PIconnect._typing.dotnet`
+    PIconnect._typing.dotnet
 install_requires =
     pandas
     wrapt
