--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,4 +45,4 @@ jobs:
             environments: ${{ matrix.environment }}
 
       - name: Test with pytest
-        run: pixi run -e ${{ matrix.environment }} test
+        run: pixi run -e ${{ matrix.environment }} pytest
